# featurematch

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
featurematch/: __init__.py  featurematch.py  viz.py
notebooks/: featurematch_demo.ipynb
tests/: test_featurematch.py
